--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
     <li>Certificate in English Teaching to Adults (CELTA) @ <a href="https://www.cambridgeenglish.org/">Cambridge Assessment English</a> 2019</li>
     <li>Economics @ <a href="https://unideb.hu/">University of Debrecen</a> 2010-2016</li>
   </ul>
+  <hr>
+  <a href="https://github.com/TonyTrip/cv/blob/main/contacts.html">Contact Me (or not)< /a>
+    <br>
+  <a href="https://github.com/TonyTrip/cv/blob/main/hobbies.html">My Hobbies< /a>
 </body>
 
 </html>
