--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
     <li>Economics @ <a href="https://unideb.hu/">University of Debrecen</a> 2010-2016</li>
   </ul>
   <hr>
-  <a href="https://github.com/TonyTrip/cv/blob/main/contacts.html">Contact Me (or not) </a>
+  <a href="https://tonytrip.github.io/cv/contacts">Contact Me (or not) </a>
     <br>
-    <a href="https://github.com/TonyTrip/cv/blob/main/hobbies.html">My Hobbies </a>
+    <a href="https://tonytrip.github.io/cv/hobbies">My Hobbies </a>
+    <br>
+  <a href="https://tonytrip.github.io/cv/inputs">Send me something funny </a>
 </body>
 
 </html>
