--- a/contacts.html
+++ b/contacts.html
@@ -6,17 +6,10 @@
   </head>
   <body>
     <ul>
-      <li>Address: 1111 Budapest, Budafoki út 34/C. 3/13.</li>
-      <li>Email: <a href="mailto:szentgyorgyiadam@gmail.com">Email me</a></li>
-      <li>Phone: <a href="tel:+36206128850">Call me</a></li>
+      <li>Address: 1039 Budapest, Pünkösdfürdő utca 1.</li>
+      <li>Email: <a href="mailto:adamka@gmail.com">Email me</a></li>
+      <li>Phone: <a href="tel:+3617014222">Call me</a></li>
     </ul>
-
-    <form class="" action="index.html" method="post">
-        <label>Your Name:</label>
-        <input type="text" name="" value="">
-        <input type="submit" name="">
-        <input type="checkbox" name="" value="">
-    </form>
 
 
   </body>
